--- a/scripts/build
+++ b/scripts/build
@@ -4,11 +4,11 @@ cd $BASEDIR
 cd ..
 
 # Build the dissertation.
-xelatex dissertation
-bibtex dissertation
-xelatex dissertation
-xelatex dissertation
+xelatex thesis 
+bibtex thesis
+xelatex thesis
+xelatex thesis
 
 # Hide the log.
-mv "dissertation.log" ".logged"
+mv "thesis.log" ".logged"
 
